tweak captions to avoid covering map details - teweak romow

--- a/m4m.css
+++ b/m4m.css
@@ -24,9 +24,8 @@ canvas        {  z-index:  1;    top:  0px; left:   0px; width: 100vw; height: 1
 
 
 .pic.fullscreen   {  z-index:  8;    top:  0px; left:   0px; width: 100vw; height: 100vh; transition: opacity 2s;  }
-#caption      {  z-index:  7;    top: 890px; left: 440px; width:1400px; padding:12px 20px; 
-color:darkgoldenrod; font-family:'Share Tech Mono', sans-serif; 
-font-size:32px;}
+#caption      {  z-index:  7;    top: 920px; left: 440px; width:1400px; padding:12px 20px; 
+				font-size:27px; color:rgb(196, 171, 107); font-family:'Share Tech Mono', sans-serif; }
 #help         {  z-index:  8;    top:  40px; left:  40px;                              }
 button { background-color: rgb(170, 224, 19); margin: 20px;   }
 
@@ -60,7 +59,8 @@ ul{
 	}
 #claro      {  width:1000px; height: 666px;	left: 500px; top: 180px;}
 #claro.small { width: 420px; height: 240px;	left:1425px; top:  90px;	}
-#romeo {	   width: 360px; height: 405x;	left:15px;   top: 511px;}
+#romeo {	   width: 360px; height: 405px;	left:  15px; top: 511px;}
+#romeo.small { width: 240px; height: 270px;	left:1640px; top: 770px;	}
 
 
 #crew { border-top: 480px;  border-right: 270px;  border-bottom: 480px;  border-left: 270px; border-color: red;    }
